--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Odin-Recipes</title>
 </head>
 <body>
   <h1>Odin Recipes</h1>
+    <ul>
+      <li><a href="recipes/thai-coconut-curry.html">Thai Coconut Curry</a></li>
+      <li><a href="recipes/fiery-fish-tacos.html">Fiery Fish Tacos with Crunch Corn Salsa</a></li>
 
-  <a href="recipes/thai-coconut-curry.html">Thai Coconut Curry</a>
-  
+    </ul>
 </body>
 </html>
