Add Steps to Fiery Fish Tacos recipe

--- a/recipes/fiery-fish-tacos.html
+++ b/recipes/fiery-fish-tacos.html
@@ -21,3 +21,12 @@
     <li>12 corn tortillas, warmed</li>
     <li>2 tablespoons sour cream, or to taste</li>
   </ul>
+
+<h2>Steps</h2>
+  <ol>
+    <li>Preheat grill for high heat.</li>
+    <li>In a medium bowl, mix together corn, red onion, jicama, red bell pepper, and cilantro. Stir in lime juice and zest.</li>
+    <li>In a small bowl, combine cayenne pepper, ground black pepper, and salt.</li>
+    <li>Brush each fillet with olive oil, and sprinkle with spices to taste.</li>
+    <li>Arrange fillets on grill grate, and cook for 3 minutes per side. For each fiery fish taco, top two corn tortillas with fish, sour cream, and corn salsa.</li>
+  </ol>
