Add link to spicy-chicken-basil.html to index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
       <li><a href="recipes/thai-coconut-curry.html">Thai Coconut Curry</a></li>
       <li><a href="recipes/fiery-fish-tacos.html">Fiery Fish Tacos with Crunch Corn Salsa</a></li>
-
+      <li><a href="recipes/spicy-basil-chicken.html">Spicy Basil Chicken</a></li>
     </ul>
 </body>
 </html>
