--- a/recipes/spicy-basil-chicken.html
+++ b/recipes/spicy-basil-chicken.html
@@ -22,3 +22,10 @@
     <li>1 cup chopped onions</li>
     <li>1 bunch fresh basil leaves</li>
   </ul>
+
+  <h2>Steps</h2>
+  
+    <ol>
+      <li>Heat the oil in a skillet over medium-high heat, and cook the garlic and chile peppers until golden brown. Mix in chicken and sugar, and season with garlic salt and pepper. Cook until chicken is no longer pink, but not done.</li>
+      <li>Stir in oyster sauce into the skillet. Mix in mushrooms and onions, and continue cooking until onions are tender and chicken juices run clear. Remove from heat, and mix in basil. Let sin 2 minutes before serving.</li>
+    </ol>
