Fix punctuation in steps

--- a/recipes/thai-coconut-curry.html
+++ b/recipes/thai-coconut-curry.html
@@ -2,7 +2,6 @@
 
 <img src="../images/thai-coconut-curry.jpg">
 
-
 <h2>Description</h2>
 
   <p>This Thai coconut curry is loaded with flavor! It is simple to make, but incredibly versatile! This curry can be made with your choice of shrimp, beef, chicken, or tofu! This particular recipe calls for Shrimp, but it can be substituted out for any other options, or left out entirely!</p>
@@ -31,6 +30,6 @@
   <ol>
     <li>Heat oil in a large pot over medium heat. Add ginger, curry paste, and lemongrass; cook and stir in the hot oil for 1 minute.</li>
     <li>Gradualy stir in the chicken broth, then stir in fish sauce and brown sugar; reduce heat to low and simmer for 15 minutes.</li>
-    <li>Add coconut milk and mushrooms; cook and stir until mushrooms are soft, about 5 minutes</li>
-    <li>Add shrimp; cook until no longer translucent, about 5 minutes. Stir in lime juice; season with salt and garnish with cilantro</li>
+    <li>Add coconut milk and mushrooms; cook and stir until mushrooms are soft, about 5 minutes.</li>
+    <li>Add shrimp; cook until no longer translucent, about 5 minutes. Stir in lime juice; season with salt and garnish with cilantro.</li>
   </ol>
